--- a/frontend/src/scenes/insights/EmptyStates/EmptyStates.scss
+++ b/frontend/src/scenes/insights/EmptyStates/EmptyStates.scss
@@ -35,7 +35,7 @@
     }
 
     h2 {
-        font-weight: bold;
+        font-weight: 600;
         font-size: 1.5rem;
         line-height: 1.6rem;
         color: $primary_alt;
