--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -86,7 +86,7 @@ body strong {
 }
 
 .text-default {
-    color: $text_default;
+    color: var(--text-default);
     font-size: 14px;
     line-height: 20px;
     font-weight: 400;
@@ -437,16 +437,17 @@ input::-ms-clear {
 }
 
 .Toastify__toast {
-    padding: 16px;
-    border-radius: $radius;
+    padding: 1rem;
+    border-radius: var(--radius);
     font-family: inherit;
-    background-color: $bg_light;
-    border: 1px solid $border;
+    background: var(--bg-light);
+    border: 1px solid var(--border);
+    box-shadow: var(--shadow-elevation);
     @extend .text-default;
 
     h1 {
         font-size: 1.14rem;
-        font-weight: bold;
+        font-weight: 600;
     }
 
     .action-bar {
