--- a/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
+++ b/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
@@ -74,7 +74,7 @@
             min-height: 24px;
             margin-bottom: 4px;
 
-            svg {
+            svg.taxonomy-icon {
                 margin-right: 8px;
                 width: 28px;
 
