--- a/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
+++ b/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
@@ -80,7 +80,7 @@
 
                 &.taxonomy-icon-muted {
                     path {
-                        fill: var(--primary-alt);
+                        fill: var(--taxonomy-icon-muted);
                     }
                 }
 
