--- a/frontend/src/vars.scss
+++ b/frontend/src/vars.scss
@@ -75,6 +75,9 @@ $recording_failure_event_dark: #cd3000;
 $recording_highlight_event: #fdedc9;
 $recording_highlight_event_dark: #946508;
 
+// Taxonomy
+$taxonomy_icon_muted: #747ea1;
+
 // Blue Swatch
 $blue_700: #35416b;
 $blue_500: #597dce;
