--- a/frontend/src/scenes/data-management/events/EventDefinitionsTable.scss
+++ b/frontend/src/scenes/data-management/events/EventDefinitionsTable.scss
@@ -1,12 +1,79 @@
 .events-definition-table {
     .LemonTable__content > table > tbody {
-        .event-definition-column-name {
+        td.definition-column-name {
             display: flex;
             flex-direction: row;
+            align-items: center;
 
-            .event-definition-column-name-content {
+            .definition-column-name-icon {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                width: 36px;
+
+                svg.taxonomy-icon {
+                    flex-shrink: 0;
+
+                    &.taxonomy-icon-muted {
+                        path {
+                            fill: var(--taxonomy-icon-muted);
+                        }
+                    }
+
+                    &.taxonomy-icon-verified {
+                        height: 28px;
+
+                        path {
+                            fill: var(--success);
+                        }
+                    }
+                }
+            }
+
+            .definition-column-name-content {
                 display: flex;
                 flex-direction: column;
+
+                .definition-column-name-content-title {
+                    font-weight: 600;
+                }
+
+                .definition-column-name-content-description {
+                    font-style: italic;
+                    font-size: 13px;
+                    color: var(--text-muted);
+                    text-overflow: ellipsis;
+                }
+            }
+        }
+
+        td.definition-example-type {
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        .definition-pill-value {
+            display: flex;
+            align-items: center;
+            width: fit-content;
+            height: 1.25rem;
+            padding: 0.125rem 0.25rem;
+            letter-spacing: 0.25px;
+            border-radius: var(--radius);
+            border: 1px solid var(--border-light);
+            background: var(--bg-mid);
+            color: var(--muted-alt);
+            font-size: 0.625rem;
+            font-weight: 500;
+            cursor: default;
+        }
+
+        .LemonTable__expansion {
+            .event-properties-wrapper {
+                padding: 1rem 0 1rem 1rem;
+                .event-properties-header {
+                    font-weight: 600;
+                }
             }
         }
     }
