--- a/frontend/src/lib/components/TaxonomicFilter/InfiniteList.scss
+++ b/frontend/src/lib/components/TaxonomicFilter/InfiniteList.scss
@@ -36,5 +36,8 @@
                 margin-bottom: 0;
             }
         }
+        &.expand-row {
+            color: var(--primary);
+        }
     }
 }
