use taxonomic filter for the column configurator

--- a/frontend/src/lib/components/TaxonomicFilter/TaxonomicFilter.scss
+++ b/frontend/src/lib/components/TaxonomicFilter/TaxonomicFilter.scss
@@ -1,8 +1,11 @@
 .taxonomic-filter {
-    min-width: 300px;
     width: 550px;
     max-width: calc(100vw - 40px);
     background: white;
+
+    &.force-minimum-width {
+        min-width: 300px;
+    }
 
     &.one-taxonomic-tab {
         .taxonomic-infinite-list {
