--- a/frontend/src/lib/components/LemonButton/LemonButton.scss
+++ b/frontend/src/lib/components/LemonButton/LemonButton.scss
@@ -70,6 +70,13 @@
     }
 }
 
+.LemonButton--primary-alt {
+    color: var(--primary-alt);
+    .LemonRow__icon {
+        color: var(--primary-alt);
+    }
+}
+
 .LemonRow--outlined.LemonButton {
     &:not(:disabled):hover,
     &.LemonButton--active,
