--- a/frontend/src/scenes/data-management/events/EventDefinitionsTable.scss
+++ b/frontend/src/scenes/data-management/events/EventDefinitionsTable.scss
@@ -1,4 +1,6 @@
 .events-definition-table {
+    margin-top: 1rem;
+
     .LemonTable__content > table > tbody {
         td.definition-column-name {
             display: flex;
@@ -33,9 +35,21 @@
             .definition-column-name-content {
                 display: flex;
                 flex-direction: column;
+                position: relative;
 
                 .definition-column-name-content-title {
                     font-weight: 600;
+                    cursor: pointer;
+
+                    &:before {
+                        content: '';
+                        position: absolute;
+                        top: -5px;
+                        //bottom: -5px;
+                        left: -10px;
+                        right: -50px;
+                        height: 22px;
+                    }
                 }
 
                 .definition-column-name-content-description {
@@ -48,8 +62,9 @@
         }
 
         td.definition-example-type {
-            display: flex;
-            justify-content: flex-end;
+            .definition-pill-value {
+                float: right;
+            }
         }
 
         .definition-pill-value {
