move max width for performance page pop-ups to css

--- a/frontend/src/scenes/performance/WebPerformance.scss
+++ b/frontend/src/scenes/performance/WebPerformance.scss
@@ -1,5 +1,9 @@
 @import '~/vars';
 
+.performance-popup {
+    max-width: 300px;
+}
+
 .performance-waterfall {
     line-height: 32px;
     padding-right: 3em;
