--- a/frontend/src/lib/components/TaxonomicFilter/InfiniteList.scss
+++ b/frontend/src/lib/components/TaxonomicFilter/InfiniteList.scss
@@ -19,8 +19,17 @@
         padding: 4px 12px;
         cursor: pointer;
         border: none;
-        white-space: nowrap;
-        overflow-x: auto;
+
+        & > div {
+            max-width: 100%;
+
+            & > span {
+                max-width: 100%;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
 
         &.hover {
             background: rgba(0, 0, 0, 0.1);
