--- a/frontend/src/lib/components/TaxonomicFilter/TaxonomicFilter.scss
+++ b/frontend/src/lib/components/TaxonomicFilter/TaxonomicFilter.scss
@@ -2,6 +2,8 @@
     width: 550px;
     max-width: calc(100vw - 40px);
     background: white;
+    display: flex;
+    flex-direction: column;
 
     &.force-minimum-width {
         min-width: 300px;
