--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -83,7 +83,7 @@ NOTE: $medium is a SCSS var; not a keyword
     --toastify-color-warning: var(--warning);
     --toastify-color-error: var(--danger);
     --toastify-toast-background: var(--bg-light);
-    --toastify-toast-width: 25rem;
+    --toastify-toast-width: 26rem;
     --toastify-toast-min-height: 3.5rem;
     --toastify-toast-max-height: 16rem;
 }
@@ -455,40 +455,29 @@ input::-ms-clear {
 .Toastify__toast {
     align-items: center;
     opacity: 1 !important;
-    padding: 1rem;
+    padding: 0.75rem;
+    margin-bottom: 0.5rem;
     border-radius: var(--radius);
-    font-family: inherit;
+    font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'Segoe UI', 'Roboto', Helvetica, Arial, sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     border: 1px solid var(--border);
     box-shadow: var(--shadow-elevation);
-    cursor: default;
-    @extend .text-default;
+    font-size: 1rem;
+    cursor: unset;
+}
 
-    h1 {
-        font-size: 1.14rem;
-        font-weight: 600;
-    }
-
-    .action-bar {
-        @extend .text-small;
-        color: $text_muted;
-        margin-top: $default_spacing / 2;
-        display: flex;
-        align-items: center;
-        a {
-            color: $text_muted;
-        }
-        .help-button {
-            flex-grow: 1;
-            text-align: right;
-        }
-        .ant-btn-link {
-            padding: 0;
-        }
-    }
+.Toastify__toast-container {
+    padding: 0;
 }
 
 .Toastify__toast-body {
+    @extend .text-default;
+    font-weight: 500;
     padding: 0;
+    b,
+    strong {
+        font-weight: 700;
+    }
     button {
         margin: 0 0.75rem;
     }
@@ -498,7 +487,17 @@ input::-ms-clear {
     color: var(--muted-alt);
     width: 1.5rem;
     height: 1.5rem;
+    margin-right: 0.75rem;
     font-size: 1.5rem;
+    .Toastify__toast--success & {
+        color: var(--toastify-color-success);
+    }
+    .Toastify__toast--warning & {
+        color: var(--toastify-color-warning);
+    }
+    .Toastify__toast--error & {
+        color: var(--toastify-color-error);
+    }
 }
 
 .Toastify__progress-bar {
