--- a/frontend/src/lib/components/InfoMessage/AlertMessage.scss
+++ b/frontend/src/lib/components/InfoMessage/AlertMessage.scss
@@ -3,7 +3,7 @@
 .lemon-alert-message {
     background-color: var(--radius-light);
     border-radius: var(--radius);
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.75rem;
     color: $primary_alt;
     font-weight: 500;
     display: flex;
@@ -12,7 +12,7 @@
     .lemon-alert-message__icon {
         flex-shrink: 0;
         font-size: 1.5rem;
-        margin-right: 0.5rem;
+        margin-right: 0.75rem;
     }
 
     &.info {
@@ -22,5 +22,9 @@
     &.warning {
         background-color: rgba($warning, 0.09);
         color: $warning;
+    }
+
+    p {
+        margin-bottom: 0.25em;
     }
 }
