fix(column-configurator): convert to using the taxonomic filter (#8726)
* copy array in selector to trigger change detection

* use taxonomic filter for the column configurator

* fix column configurator tests

* fix weird test failure

* ensure the taxonomic popup isn't showing row 0 when then column configurator opens

* rename visible columns now there are no hidden columns

* rename visible columns now there are no hidden columns

* tidy up column configurator

* which allows removal of a use of the property definitions model

* more specific prop to disable popper on taxonomic filter

* better column name

* don't allow duplicate column selections

* use autosizer height and width and flex display to have infinite list fill its parent container

* set text overflow for long rows in the infinite list

* update column configurator columns when resetting

* select initial row based on props

* don't create css if height and width are not provided

* limit scope of change to propertykeyinfo width

* alter column configurator reset behaviour

* set popper enabled without breaking text search

* don't need to pass popper enabled two different ways to infinite list

* allow taxonomic filter value consumers to configure it not to clear search query when an item is selected

* clear the taxonomic filter search when the column configurator is saved

* fix tests

* default column configurator to an empty array of columns

* Revert "default column configurator to an empty array of columns"

This reverts commit ce40e3a1bebac243abc104684a6a8ef58f9bd659.

* Revert "fix tests"

This reverts commit e91c407e0101d6062b748ece511a70784247cad2.

* Revert "clear the taxonomic filter search when the column configurator is saved"

This reverts commit 21500ad6418696456e5486944a74f7c9bad84b66.

* rename popper to popover

* move taxonomic filter config onto its props

* tidier declaration of style

* make selecting the f

--- a/frontend/src/lib/components/TaxonomicFilter/TaxonomicFilter.scss
+++ b/frontend/src/lib/components/TaxonomicFilter/TaxonomicFilter.scss
@@ -1,8 +1,13 @@
 .taxonomic-filter {
-    min-width: 300px;
     width: 550px;
     max-width: calc(100vw - 40px);
     background: white;
+    display: flex;
+    flex-direction: column;
+
+    &.force-minimum-width {
+        min-width: 300px;
+    }
 
     &.one-taxonomic-tab {
         .taxonomic-infinite-list {
