--- a/frontend/src/layout/ErrorBoundary/ErrorBoundary.scss
+++ b/frontend/src/layout/ErrorBoundary/ErrorBoundary.scss
@@ -4,7 +4,7 @@
     margin-top: 1.5rem;
     background: rgba($danger, 0.1);
     border-radius: var(--radius);
-    padding: 1rem;
+    padding: 0.75rem 1rem 1rem;
     h2 {
         margin-bottom: 0.5rem;
         color: var(--danger);
