--- a/frontend/src/scenes/project-homepage/ProjectHomepage.scss
+++ b/frontend/src/scenes/project-homepage/ProjectHomepage.scss
@@ -1,5 +1,25 @@
 @import '~/vars';
 
 .project-homepage {
-    padding: $default_spacing;
+    .dashboard-header {
+        justify-content: 'space-between';
+        align-items: center;
+        .dashboard-title-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            .dashboard-name {
+                margin: 0;
+            }
+        }
+    }
+    .empty-state-container {
+        background-color: $bg_side;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        padding: $default_spacing * 4;
+        display: flex;
+        flex-direction: column;
+    }
 }
