--- a/frontend/src/layout/ErrorBoundary/ErrorBoundary.scss
+++ b/frontend/src/layout/ErrorBoundary/ErrorBoundary.scss
@@ -4,7 +4,11 @@
     margin-top: 1.5rem;
     background: rgba($danger, 0.1);
     border-radius: var(--radius);
+    margin: 1.5rem;
     padding: 0.75rem 1rem 1rem;
+    .main-app-content & {
+        margin: 1.5rem 0;
+    }
     h2 {
         margin-bottom: 0.5rem;
         color: var(--danger);
