--- a/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
+++ b/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
@@ -77,6 +77,7 @@
             svg.taxonomy-icon {
                 margin-right: 8px;
                 width: 28px;
+                flex-shrink: 0;
 
                 &.taxonomy-icon-muted {
                     path {
