--- a/frontend/src/scenes/data-management/events/EventDefinitionsTable.scss
+++ b/frontend/src/scenes/data-management/events/EventDefinitionsTable.scss
@@ -24,6 +24,7 @@
 
                     &.taxonomy-icon-verified {
                         height: 28px;
+                        margin-bottom: -4px;
 
                         path {
                             fill: var(--success);
