--- a/frontend/src/lib/lemon-ui/LemonRichContent/LemonRichContentEditor.scss
+++ b/frontend/src/lib/lemon-ui/LemonRichContent/LemonRichContentEditor.scss
@@ -7,6 +7,20 @@
         & > div[contenteditable] {
             outline: none;
 
+            h1 {
+                margin-bottom: 0.25rem;
+                font-size: 1.5rem;
+                font-weight: 700;
+                line-height: 1.25;
+            }
+
+            h2 {
+                margin-bottom: 0.25rem;
+                font-size: 1.25rem;
+                font-weight: 600;
+                line-height: 1.3;
+            }
+
             p {
                 margin-bottom: 0;
             }
