--- a/frontend/src/scenes/billing/BillingGauge.scss
+++ b/frontend/src/scenes/billing/BillingGauge.scss
@@ -36,7 +36,7 @@
         background: var(--color-destructive-foreground);
 
         &.BillingGaugeItem--within-usage-limit {
-            background: var(--brand-blue);
+            background: var(--color-brand-blue);
         }
     }
 
