--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -1223,14 +1223,15 @@
     // //////////////////////////////////////////////////////////
     // --border: var(--color-neutral-cool-800);
     --color-border-border-strong: var(--color-neutral-cool-600);
-    --color-border-info: var(--color-blue-900);
-    --color-border-warning: var(--color-yellow-900);
+
+    // --color-border-info: var(--color-blue-900);
+    // --color-border-warning: var(--color-yellow-900);
 
     /* Border for warning */
-    --color-border-error: var(--color-red-900);
+    // --color-border-error: var(--color-red-900);
 
     /* Border for error */
-    --color-border-success: var(--color-green-900);
+    // --color-border-success: var(--color-green-900);
 
     /* Border for success */
 
