--- a/frontend/src/lib/components/TaxonomicFilter/InfiniteList.scss
+++ b/frontend/src/lib/components/TaxonomicFilter/InfiniteList.scss
@@ -67,7 +67,7 @@
 
         &.hover,
         &.active {
-            background-color: var(--color-background);
+            background-color: var(--color-accent);
             border-radius: var(--radius);
         }
 
