--- a/frontend/src/lib/lemon-ui/LemonRow/LemonRow.scss
+++ b/frontend/src/lib/lemon-ui/LemonRow/LemonRow.scss
@@ -21,7 +21,7 @@
     &.LemonRow--status-highlighted {
         font-weight: 600;
         color: var(--color-foreground);
-        background: var(--color-accent-highlight-secondary);
+        background: var(--color-primary-muted);
 
         .LemonRow__icon {
             color: var(--color-primary);
