--- a/frontend/src/queries/nodes/DataTable/ColumnConfigurator/ColumnConfigurator.scss
+++ b/frontend/src/queries/nodes/DataTable/ColumnConfigurator/ColumnConfigurator.scss
@@ -28,7 +28,7 @@
         padding: 0 0.5rem;
         margin: calc(var(--radius) / 2) 0;
         overflow: hidden;
-        background-color: var(--color-accent-highlight-secondary);
+        background-color: var(--color-primary-muted);
         border-radius: var(--radius);
     }
 
