--- a/frontend/src/scenes/session-recordings/playlist/Playlist.scss
+++ b/frontend/src/scenes/session-recordings/playlist/Playlist.scss
@@ -52,6 +52,6 @@
     }
 
     &:hover {
-        background-color: var(--color-accent-highlight-secondary);
+        background-color: var(--color-accent);
     }
 }
