--- a/frontend/src/lib/lemon-ui/LemonTable/LemonTableLoader.scss
+++ b/frontend/src/lib/lemon-ui/LemonTable/LemonTableLoader.scss
@@ -6,7 +6,7 @@
     height: 0;
     padding: 0.05rem !important;
     overflow: hidden;
-    background: var(--color-accent-highlight-secondary);
+    background: var(--color-primary-muted);
     border: none !important;
     transition:
         height 200ms ease,
